[package]
name = "new2"
version = "0.1.0"
edition = "2021"

[dependencies]
axstd = { workspace = true, features = ["paging"], optional = true }
axhal = { workspace = true }
axalloc = { workspace = true }
linkme = "0.3"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.11"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
riscv_goldfish = { version = "0.1", optional = true }